# py-audio-box

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.cuda  Dockerfile.cuda-base  Dockerfile.watcher  Makefile  README.md  docker-compose.gpu.yml  docker-compose.watcher.yml  docker-compose.yml  jobs.example.yaml  pyproject.toml  run  run-direct  run.ps1
.claude/: settings.local.json
.github/: copilot-instructions.md
apps/job-runner/: README.md  job-runner.py
apps/job-watcher/: README.md  job-watcher.py
apps/voice-clone/: README.md  styles.yaml  voice-clone.py  voice-clone.py.bak
apps/voice-register/: README.md  voice-register.py
apps/voice-split/: README.md  voice-split.py
apps/voice-synth/: README.md  styles.yaml  voice-synth.py
docs/: JOB_RUNNER_IMPLEMENTATION_PLAN.md  QWEN3_AGENTIC_INTEGRATION_PLAN.md  VASTAI.md
lib/: __init__.py  audio.py  jobqueue.py  styles.yaml  tts.py  vad.py  voices.py
scripts/: jobs-watch.sh  local-synth-test.sh  publish.sh  run-e2e-test.sh  smoke-matrix.sh  vast  vast-deploy-json.sh  vast-deploy.sh  vastai-setup.sh
tests/: test_audio_selection.py  test_capabilities_and_metadata.py  test_customvoice_feature_flag.py  test_generation_profiles.py  test_job_runner.py  test_job_watcher.py  test_jobqueue.py  test_voice_clone_quality_gate.py  test_voice_clone_self_test_download.py  test_voice_synth_selection.py
tests/integration/: test_jobqueue_redis_integration.py
tests/local/: 01-cli-utils.sh  02-voice-clone.sh  03-clone-profiles.sh  04-designed-clone.sh  05-variants.sh  06-chunking.sh  07-text-file.sh  (+14 more)
(+10 files in other folders)
